added player one p.s keyframes suck

--- a/game.html
+++ b/game.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="game.css">
   </head>
 <body>
-  <div id='player2'>
+  <div id='player2'></div>
    <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
-</div>
+  <div id='player1'></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
