added animations and collision detection

--- a/game.html
+++ b/game.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="game.css">
   </head>
 <body>
+  <div class="hpbar1"></div>
+  <div class="hpbar2"></div>
   <div id='player2'></div>
    <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
   <div id='player1'></div>
