more sprites, animations, and a local copy of jqeury cause never trust the internet

--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
   <div id='player2'></div>
    <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
   <div id='player1'></div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js'></script>
+  <script src='jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
