added starting animation and hp bars are now functional

--- a/game.html
+++ b/game.html
@@ -7,11 +7,15 @@
   <link rel="stylesheet" href="game.css">
   </head>
 <body>
+
   <div class="hpbar1"></div>
+  <div class="hpbarback1"></div>
   <div class="hpbar2"></div>
+  <div class="hpbarback2"></div>
   <div id='player2'></div>
    <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
   <div id='player1'></div>
+
   <script src='jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
