--- a/game.html
+++ b/game.html
@@ -3,18 +3,30 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>Fighting Game</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="stylesheet" href="game.css">
   </head>
 <body>
-
+  <div id='player1'></div>
   <div class="hpbar1"></div>
   <div class="hpbarback1"></div>
+
+
+  <div id='player2'></div>
   <div class="hpbar2"></div>
   <div class="hpbarback2"></div>
-  <div id='player2'></div>
+
+
+  <div class="fight"></div>
+  <div class="portraitp1"></div>
+  <div class="portraitp2"></div>
+  <label class='p1'>Player1:</label>
+  <label class='p2'>Player2:</label>
+  <div class="hpbg1"></div>
+  <div class="hpbg2"></div>
    <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
-  <div id='player1'></div>
+
 
   <script src='jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
