--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
   <label class='p2'>Player2:</label>
   <div class="hpbg1"></div>
   <div class="hpbg2"></div>
+  <label class="timer"></label>
    <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
 
 
