media queries airbnb stuff

--- a/game.html
+++ b/game.html
@@ -26,7 +26,8 @@
   <div class="hpbg1"></div>
   <div class="hpbg2"></div>
   <label class="timer"></label>
-   <!--  <img id="luffy" src='img/luffy/luffystandgif.gif' height='236px' width='224px'> -->
+  <label class="result"></label>
+
 
 
   <script src='jquery.js'></script>
