--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <script src='jquery.js'></script>
+  <div class="logo"></div>
+  <div class="parchment">
+    <div class="boxcontent">
+      <form action="../game.html/showForm" class="list-maker-form" method="post">
+        <label>First Player Name</label></br>
+        <input type="text"></br>
+        <label>Second Player Name</label></br>
+        <input type="text">
+      </form>
+      <a href="game.html"><button>Play</button></a>
+      </div>
+    </div>
+  <script src='jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
