--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="logo"></div>
   <div class="parchment">
     <div class="boxcontent">
-      <form action="https://dzabuza.github.io/project1-fighter/game.html/showForm" class="list-maker-form" method="post">
+      <form action="game.html/showForm" class="list-maker-form" method="post">
         <label>First Player Name</label></br>
         <input type="text"></br>
         <label>Second Player Name</label></br>
