--- a/game.html
+++ b/game.html
@@ -21,8 +21,8 @@
   <div class="fight"></div>
   <div class="portraitp1"></div>
   <div class="portraitp2"></div>
-  <label class='p1'>Player1:</label>
-  <label class='p2'>Player2:</label>
+  <label class='p1'>Player1</label>
+  <label class='p2'>Player2</label>
   <div class="hpbg1"></div>
   <div class="hpbg2"></div>
   <label class="timer"></label>
