--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
   <div class="logo"></div>
   <div class="parchment">
-    <div class="boxcontent">
-      <form action="game.html/showForm" class="list-maker-form" method="post">
+
+    <form action='game.html' class='playername' method='get' name='pname'>
+      <div class="boxcontent">
         <label>First Player Name</label></br>
-        <input type="text"></br>
+        <input type="text" placeholder='Player 1' required name='p1'></br>
         <label>Second Player Name</label></br>
-        <input type="text">
-      </form>
-      <a href="game.html"><button>Play</button></a>
+        <input type="text" placeholder='Player 2' required name='p2'></br>
+        <a href="game.html"><button type='submit'>Play</button></a>
       </div>
+     </form>
     </div>
   <script src='jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
