media query for landing page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       </div>
      </form>
     </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus,
+    minus, id? Sapiente maiores dolores, itaque, natus velit ad dolor aspernatur
+     eum suscipit aperiam voluptas at magnam eligendi nulla neque saepe. Lorem
+     ipsum dolor sit amet, consectetur adipisicing elit. Amet voluptatum velit
+     tempora enim quam, vel sed consequatur hic quia nulla at! Quasi numquam
+     consequatur alias, similique dicta hic non dignissimos. </p>
   <script src='jquery.js'></script>
   <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
