forgot to give the user instructions small fire put out

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+<div class="p1controls">
+  <p class='controls'>wasd keys move player 1 </br>z and x are the attacks</p></br>
+  <img src="img/landing/wasd.png"></br>
+
+  <img src="img/landing/p1attack.png" class='attack'>
+</div>
+<div class="p2controls">
+  <p class='controls'>arrow keys move player 2</br> . and / are the attacks</p>
+  <img src="img/landing/arrowkeys.png">
+
+  <img src="img/landing/p2attack.png" class='attack'>
+</div>
   <div class="logo"></div>
   <div class="parchment">
 
