--- a/game.html
+++ b/game.html
@@ -23,8 +23,8 @@
   <div class="portraitp2"></div>
   <label class='p1'>Player1</label>
   <label class='p2'>Player2</label>
-  <div class="hpbg1"></div>
-  <div class="hpbg2"></div>
+  <div class="hpbg"></div>
+  <div class="hpbg"></div>
   <label class="timer"></label>
   <label class="result"></label>
 
