--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
   <label class='p1'>Player1</label>
   <label class='p2'>Player2</label>
   <div class="hpbg"></div>
-  <div class="hpbg"></div>
+  <div class="hpbg2"></div>
   <label class="timer"></label>
   <label class="result"></label>
 
